--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.iml
-.gradle
+#.gradle
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -8,7 +8,7 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
+#/build
 /captures
 .externalNativeBuild
 .cxx
