--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShutterSpeeder"
+        android:exported="true"
         tools:targetApi="35">
         <activity
             android:name=".MainActivity"
